--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,3 +9,5 @@ LazyData: true
 Imports:
     stats
 RoxygenNote: 7.3.2
+URL: https://github.com/EthanCHEN6/SimpleBioTools
+BugReports: https://github.com/EthanCHEN6/SimpleBioTools/issues
