--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,9 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Imports:
-    stats
+    stats,
+    ggplot2
 RoxygenNote: 7.3.2
 URL: https://github.com/EthanCHEN6/SimpleBioTools
 BugReports: https://github.com/EthanCHEN6/SimpleBioTools/issues
+
