--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,3 +11,6 @@ Imports:
 RoxygenNote: 7.3.2
 URL: https://github.com/EthanCHEN6/SimpleBioTools
 BugReports: https://github.com/EthanCHEN6/SimpleBioTools/issues
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
